# times-two-agent

./: .dockerignore  .env.example  .env.test  .gitignore  .gitignore.sh  Dockerfile  Makefile  Procfile  README.md  decode_token.py  pyproject.toml  requirements.txt
data/: agent.yaml
http/: http-client.env.json  v1alpha2_configurable.http  v1alpha2_deployed.http  v1alpha2_virtual.http
scripts/: create_agent_body.json  getAccessBiscuit-orig.py  getAccessBiscuit.py  new_biscuit.py  setup_config.py
src/: agent.py  app.py  app_v1alpha2.py  deploy_agent.py
